test_regress/t/t_castdyn.out
%Error-UNSUPPORTED: t/t_castdyn.v:28:11: Unsupported: $cast. Suggest try static cast.
                                       : ... In instance t
   28 |       i = $cast(ao, a);
      |           ^~~~~
%Error-UNSUPPORTED: t/t_castdyn.v:33:7: Unsupported: $cast. Suggest try static cast.
                                      : ... In instance t
   33 |       $cast(ao, a);
      |       ^~~~~
%Error-UNSUPPORTED: t/t_castdyn.v:36:11: Unsupported: $cast. Suggest try static cast.
                                       : ... In instance t
   36 |       i = $cast(ao, 2.1 * 3.7);
      |           ^~~~~
%Error-UNSUPPORTED: t/t_castdyn.v:40:11: Unsupported: $cast. Suggest try static cast.
                                       : ... In instance t
   40 |       i = $cast(bo, null);
      |           ^~~~~
%Error-UNSUPPORTED: t/t_castdyn.v:46:11: Unsupported: $cast. Suggest try static cast.
                                       : ... In instance t
   46 |       i = $cast(bao, b);
      |           ^~~~~
%Error-UNSUPPORTED: t/t_castdyn.v:52:11: Unsupported: $cast. Suggest try static cast.
                                       : ... In instance t
   52 |       i = $cast(bbo, b);
      |           ^~~~~
%Error-UNSUPPORTED: t/t_castdyn.v:59:11: Unsupported: $cast. Suggest try static cast.
                                       : ... In instance t
   59 |       i = $cast(bao, b);
      |           ^~~~~
%Error: Exiting due to
